modif nab bar et home

--- a/app/assets/stylesheets/components/_avatar.scss
+++ b/app/assets/stylesheets/components/_avatar.scss
@@ -1,6 +1,7 @@
 .avatar {
-  width: 40px;
-  border-radius: 50%;
+  width: 44px;
+  border-radius: 63%;
+  height: 134%;
 }
 .avatar-large {
   width: 56px;
