--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,12 +1,12 @@
-<div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(<%= asset_path('gifhomepage.gif')%>)">
+<div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.2),rgba(0,0,0,0.2)), url(<%= asset_path('gifhomepage.gif')%>)">
   <div class="container">
-    <h1 class="text-center"><strong>Choisissez TravelFlex</strong></h1>
+    <h1 class="text-center"><strong>Flex your mind to flex your trip !</strong></h1>
 
-    <p class="text-center">Pour voyager, il faut être flex</p>
+    <p class="text-center">Design my journey</p>
       <div class="cards-homepage mt-4">
         <div class="d-flex justify-content-center gap-3">
           <%= form_tag(search_path, method: "get") do %>
-            <%= text_field_tag :destination, "", placeholder: "Ma destination" %>
+            <%= text_field_tag :destination, placeholder: "Ma destination" %>
             <%= submit_tag "Go", class: "btn-home" %>
           <% end %>
           <%= link_to "Inspirez-moi", search_path, class: "btn-home" %>
