--- a/app/views/pages/search.html.erb
+++ b/app/views/pages/search.html.erb
@@ -1,9 +1,9 @@
 <div data-controller="loader">
-<div data-loader-target="loader2" class="banner bck-img">
+<div data-loader-target="loader2">
   <%= render "shared/form1", travel: @travel %>
 
     <div class="d-none" data-loader-target="loader" >
-    
+
    <div class="page-wrap" data-controller="burger">
     <main>
       <nav>
