--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -6,6 +6,6 @@
     <a href="https://kitt.lewagon.com/camps/1211/classmates_game"><i class="fab fa-twitter"></i></a>
   </div>
   <div class="footer-copyright">
-    Voyagez Flex <i class="fa-solid fa-earth-americas fa-spin"></i>
+    Design your trip <i class="fa-solid fa-earth-americas" style="color: #c1c1c1;"></i>
   </div>
 </div>
