--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -23,6 +23,6 @@
   font-family: $raleway-font;
   margin-right: 26px;
   margin-top: 7px;
-  color: gray;
+  color: #F68712;
   font-weight: bold;
 }
