--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -3,7 +3,8 @@
 $sky-flex: #0AAFE6;
 $ocre-flex: #CC4D23;
 $blue-flex: #2984DA;
-$yellow-flex: #F89821;
+$yellow-flex: #F68712;
+$lightblue-flex: #A5C7C8;
 
 // For example:
 $red: #FD1015;
