--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -5,6 +5,7 @@ $ocre-flex: #CC4D23;
 $blue-flex: #2984DA;
 $yellow-flex: #F68712;
 $lightblue-flex: #A5C7C8;
+$orange-flex: #E8713C;
 
 // For example:
 $red: #FD1015;
