--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -1,7 +1,9 @@
 .banner {
   background-size: cover;
   background-position: center;
-  padding: 200px 0;
+  padding: 200px;
+  width: 100%;
+  height: 100%;
 }
 
 .banner-padding  {
