--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -63,9 +63,9 @@
   color: white;
   font-size: 24px;
   font-weight: bold;
-  text-shadow: 1px 1px 3px rgba(0,0,0,0.1);
-  border-radius: 5px;
-  box-shadow: 0 0 15px rgba(0,0,0,0.1);
+  // text-shadow: 2px 2px 10px rgba(0,0,0,0.6);
+  border-radius: 7px;
+  box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.55);
 }
 
 
