--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -8,6 +8,7 @@
   color: rgba(0,0,0,0.3);
   bottom: 0;
   width: 100%;
+  position: fixed;
 }
 
 .footer-links {
@@ -27,4 +28,3 @@
 .footer .fa-heart {
   color: #D23333;
 }
-
