--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,6 +1,10 @@
 .navbar-lewagon {
   justify-content: space-between;
   background-color: transparent;
+  position: fixed;
+  width: 100%;
+  top: 0;
+  transition: all ease-in-out 0.3s;
 }
 
 .navbar-lewagon .navbar-collapse {
