--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -6,7 +6,7 @@
       <div class="cards-homepage mt-4">
         <div class="d-flex justify-content-center gap-3">
           <%= form_tag(search_path, method: "get") do %>
-            <%= text_field_tag :destination, placeholder: "Ma destination" %>
+            <%= text_field_tag :destination, "Ma destination", class: 'text-center' %>
             <%= submit_tag "Go", class: "btn-home" %>
           <% end %>
           <%= link_to "Inspirez-moi", search_path, class: "btn-home" %>
