--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -34,6 +34,6 @@
 }
 
 
-background-color: white;
-border-radius: 9px;
-width: auto;
+// background-color: white;
+// border-radius: 9px;
+// width: auto;
