--- a/app/views/pages/search.html.erb
+++ b/app/views/pages/search.html.erb
@@ -6,13 +6,10 @@
 
    <div class="page-wrap" data-controller="burger">
     <main>
-      <nav>
-      <h1>TravelFlex | Nous choisissons les destinations les plus pertinentes en prenant en compte vos critères</h1>
-    </nav>
       <article id="hero-1" style="--i: 5">
         <div class="hero-info">
-          <h2 data-target="burger.heroText">Travel the</h2>
-          <h1 data-target="burger.heroText">World</h1>
+          <h2 data-target="burger.heroText">Nous Construisons Votre Voyage</h2>
+          <h1 data-target="burger.heroText">Sur Mesure</h1>
           <h3 data-target="burger.heroText">Pragser Wildsee, Italy</h3>
         </div>
         <div class="hero-image hi-1"></div>
@@ -20,8 +17,8 @@
 
       <article id="hero-2" style="--i: 4">
         <div class="hero-info">
-          <h2 data-target="burger.heroText">Savour the</h2>
-          <h1 data-target="burger.heroText">Journey</h1>
+          <h2 data-target="burger.heroText"></h2>
+          <h1 data-target="burger.heroText">Laissez Vous Inspirer</h1>
           <h3 data-target="burger.heroText">Marignier, France</h3>
         </div>
         <div class="hero-image hi-2"></div>
@@ -29,7 +26,7 @@
 
       <article id="hero-3" style="--i: 3">
         <div class="hero-info">
-          <h2 data-target="burger.heroText">Expand Your</h2>
+          <h2 data-target="burger.heroText">Vers De Nouveaux</h2>
           <h1 data-target="burger.heroText">Horizons</h1>
           <h3 data-target="burger.heroText">Hooker Valley Track, New Zealand</h3>
         </div>
@@ -38,8 +35,8 @@
 
       <article id="hero-4" style="--i: 2">
         <div class="hero-info">
-          <h2 data-target="burger.heroText">Explore and</h2>
-          <h1 data-target="burger.heroText">Reflect</h1>
+          <h2 data-target="burger.heroText">Explorez</h2>
+          <h1 data-target="burger.heroText">Le Monde</h1>
           <h3 data-target="burger.heroText">Dolmites, Italy</h3>
         </div>
         <div class="hero-image hi-4"></div>
@@ -47,8 +44,8 @@
 
       <article id="hero-5" style="--i: 1">
         <div class="hero-info">
-          <h2 data-target="burger.heroText">Change Your</h2>
-          <h1 data-target="burger.heroText">Perspective</h1>
+          <h2 data-target="burger.heroText">Changez Vos</h2>
+          <h1 data-target="burger.heroText">Perspectives</h1>
           <h3 data-target="burger.heroText">Phuket, Thailand</h3>
         </div>
         <div class="hero-image hi-5"></div>
