--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -4,10 +4,10 @@
 @import "banner";
 @import "button";
 @import "card";
+@import "cards";
 @import "carousel";
 @import "footer";
 @import "form";
 @import "form_legend_clear";
 @import "loader";
 @import "navbar";
-@import "cards"
