--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,6 +1,6 @@
 <div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.2),rgba(0,0,0,0.2)), url(<%= asset_path('gifhomepage.gif')%>)">
   <div class="container">
-    <h1 class="text-center"><strong>Flex travel, une autre idée du voyage</strong></h1>
+    <h1 class="text-center"><strong>Travel Flex, une autre idée du voyage</strong></h1>
 
     <p class="text-center">Concevoir mon voyage</p>
       <div class="cards-homepage mt-4">
