En Français svp

--- a/app/views/pages/search.html.erb
+++ b/app/views/pages/search.html.erb
@@ -10,7 +10,7 @@
         <div class="hero-info">
           <h2 data-target="burger.heroText">Nous Construisons Votre Voyage</h2>
           <h1 data-target="burger.heroText">Sur Mesure</h1>
-          <h3 data-target="burger.heroText">Pragser Wildsee, Italy</h3>
+          <h3 data-target="burger.heroText">Lago di Braies, Italie</h3>
         </div>
         <div class="hero-image hi-1"></div>
       </article>
@@ -28,7 +28,7 @@
         <div class="hero-info">
           <h2 data-target="burger.heroText">Vers De Nouveaux</h2>
           <h1 data-target="burger.heroText">Horizons</h1>
-          <h3 data-target="burger.heroText">Hooker Valley Track, New Zealand</h3>
+          <h3 data-target="burger.heroText">Hooker Valley Track, Nouvelle-Zélande</h3>
         </div>
         <div class="hero-image hi-3"></div>
       </article>
@@ -37,7 +37,7 @@
         <div class="hero-info">
           <h2 data-target="burger.heroText">Explorez</h2>
           <h1 data-target="burger.heroText">Le Monde</h1>
-          <h3 data-target="burger.heroText">Dolmites, Italy</h3>
+          <h3 data-target="burger.heroText">Dolomites, Italie</h3>
         </div>
         <div class="hero-image hi-4"></div>
       </article>
@@ -46,7 +46,7 @@
         <div class="hero-info">
           <h2 data-target="burger.heroText">Changez Vos</h2>
           <h1 data-target="burger.heroText">Perspectives</h1>
-          <h3 data-target="burger.heroText">Phuket, Thailand</h3>
+          <h3 data-target="burger.heroText">Phuket, Thaïlande</h3>
         </div>
         <div class="hero-image hi-5"></div>
       </article>
