--- a/app/views/pages/destinations.html.erb
+++ b/app/views/pages/destinations.html.erb
@@ -25,7 +25,7 @@
               </div>
               <div class="modal-body">
                 <img class="card-img-top" src="<%= destination["img_src"] %>" alt="Card image cap">
-                  <p class="p-2"> <%= destination["text_content"] %></p>
+                  <p class="p-2"> <%= destination["text_content"][0] %> <%= destination["text_content"][1] %>..</p>
                 <div style="width: 100%; height: 200px;"
                   data-controller="map"
                   data-map-markers-value="<%=[{lat: destination["lat"].to_f, lng: destination["long"].to_f}].to_json %>"
