input home + navbar

--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -20,7 +20,6 @@
   border-radius: 8px;
   color: whitesmoke;
   background-color: #F68712;
-  margin-top: 5px;
   padding: 7px;
   text-decoration: none;
   border: #F68712;
@@ -33,7 +32,6 @@
   }
 }
 
-
-// background-color: white;
-// border-radius: 9px;
-// width: auto;
+#destination {
+  border: none;
+}
