--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -5,10 +5,12 @@
     <p class="text-center">Concevoir mon voyage</p>
       <div class="cards-homepage mt-4">
         <div class="d-flex justify-content-center gap-3">
-          <%= form_tag(search_path, method: "get") do %>
-            <%= text_field_tag :destination, "Ma destination", class: 'text-center' %>
-            <%= submit_tag "Go", class: "btn-home" %>
-          <% end %>
+          <div class="homecard">
+            <%= form_tag(search_path, method: "get") do %>
+              <%= text_field_tag :destination, "Ma destination", class: 'text-center' %>
+              <%= submit_tag "Y aller !", class: "btn-home" %>
+            <% end %>
+          </div>
           <%= link_to "Inspirez-moi", search_path, class: "btn-home" %>
         </div>
       </div>
