--- a/app/views/shared/_form1.html.erb
+++ b/app/views/shared/_form1.html.erb
@@ -13,19 +13,22 @@
         <span class="visually-hidden">Next</span>
       </button>
 
-      <div class="carousel-indicators carouselstep">
-        <button type="button " data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
-        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
-        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="3" aria-label="Slide 4"></button>
-        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="4" aria-label="Slide 5"></button>
-      </div>
+
 
       <div class="carousel-inner">
         <div class="carousel-item bg-white p-3 active">
           <div class="d-flex align-items-center justify-content-center bg-white px-3 rounded h-100 flex-column">
+
+            <div class="carousel-indicators carouselstep">
+              <button type="button " data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="3" aria-label="Slide 4"></button>
+              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="4" aria-label="Slide 5"></button>
+            </div>
+
             <div class="questionform p-3 w-100">
-              <h3>Choisissez votre budget :</h3>
+              <h3>Déterminez votre budget :</h3>
             </div>
             <%= f.input :budget, as: :radio_buttons, legend: false, collection: ['< 500 €', 'de 500 € à 1 000 €', '> 1 000 €'], label_method: lambda { |item| render "shared/labels/budget_label", item: item  }, input_html: { class: "d-none category-selector" }, wrapper_html: { class: "d-flex align-items-center justify-content-between" } %>
           </div>
@@ -33,7 +36,7 @@
         <div class="carousel-item bg-white p-3 rounded">
           <div class="d-flex align-items-center justify-content-center bg-white px-3 rounded h-100 flex-column">
             <div class="questionform p-3 w-100">
-              <h3>Choisissez votre duration :</h3>
+              <h3>Combien de temps souhiatez-vous voyager ? :</h3>
             </div>
             <%= f.input :duration, as: :radio_buttons, legend: false, collection: ['week-end', '1 semaine', '2 semaines'], label_method: lambda { |item| render "shared/labels/duration_label", item: item  }, input_html: { class: "d-none category-selector" }, wrapper_html: { class: "d-flex align-items-center justify-content-between" } %>
           </div>
@@ -41,7 +44,7 @@
         <div class="carousel-item bg-white p-3 rounded">
           <div class="d-flex align-items-center justify-content-center bg-white px-3 rounded h-100 flex-column">
             <div class="questionform p-3 w-100">
-              <h3>Choisissez votre travelers :</h3>
+              <h3>Avec qui voyagez-vous ? :</h3>
             </div>
             <%= f.input :travelers, as: :radio_buttons, legend: false, collection: ['solo', 'couple', 'famille'], label_method: lambda { |item| render "shared/labels/traveler_type_label", item: item  }, input_html: { class: "d-none category-selector" }, wrapper_html: { class: "d-flex align-items-center justify-content-between" } %>
           </div>
@@ -49,7 +52,7 @@
         <div class="carousel-item bg-white p-3 rounded">
           <div class="d-flex align-items-center justify-content-center bg-white px-3 rounded h-100 flex-column">
             <div class="questionform p-3 w-100" >
-              <h3>Choisissez votre type :</h3>
+              <h3>Quel type de voyage souhiatez-vous faire ? :</h3>
             </div>
             <%= f.input :type, as: :radio_buttons, legend: false, collection: ['ville', 'plage', 'montagne'], label_method: lambda { |item| render "shared/labels/destination_type_label", item: item  }, input_html: { class: "d-none category-selector" }, wrapper_html: { class: "d-flex align-items-center justify-content-between" } %>
           </div>
