--- a/app/assets/stylesheets/components/_cards.scss
+++ b/app/assets/stylesheets/components/_cards.scss
@@ -104,7 +104,7 @@
 }
 
 .cardInfo h3 {
-  font-family: "Playfair Display";
+  font-family: "raleway-font";
   font-size: 36px;
   font-weight: 700;
   text-shadow: rgba(0, 0, 0, 0.5) 0 10px 10px;
